--- a/templates/index.html
+++ b/templates/index.html
@@ -92,11 +92,12 @@
                 </nav>
                 <!-- Action Button -->
                 <div class="flex items-center gap-4">
-                    <button
+                  <!-- hide resume for now -->
+                    <!-- <button
                         class="bg-primary hover:bg-blue-600 text-white text-sm font-bold h-9 px-4 rounded transition-colors flex items-center gap-2">
                         <span class="material-symbols-outlined !text-sm">download</span>
                         <span>Resume</span>
-                    </button>
+                    </button> -->
                     <!-- Mobile Menu Button (Icon Only) -->
                     <button class="md:hidden text-slate-600 dark:text-slate-300">
                         <span class="material-symbols-outlined">menu</span>
