--- a/templates/posts.html
+++ b/templates/posts.html
@@ -18,7 +18,7 @@
                 <div class="flex flex-col gap-4">
 {{range .Posts}}
                   <a class="group relative flex flex-col sm:flex-row gap-6 p-6 bg-white dark:bg-[#192233] border border-gray-200 dark:border-[#324467] rounded-xl hover:border-primary/50 transition-all duration-300 shadow-sm hover:shadow-lg dark:hover:shadow-primary/5"
-                        href="#">
+                        href="{{.Slug}}.html">
                         <!-- <div
                             class="shrink-0 hidden sm:flex items-center justify-center w-24 h-24 rounded-lg bg-slate-100 dark:bg-[#0f1521] text-slate-300 dark:text-[#232f48] group-hover:text-primary/70 transition-colors">
                             <span class="material-symbols-outlined !text-4xl">architecture</span>
