--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Halaman Beranda Portofolio</title>
+    <title>{{if .Title}}{{.SiteName}} - {{.Title}}{{else}}{{.SiteName}}{{end}}</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
