--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
             <div class="grid grid-cols-lg-3">
                 {{range .Posts}}
                 <article class="card card-content">
+                    {{if .FeaturedImage}}<img src="{{.FeaturedImage}}" alt="{{.Title}}" class="post-image">{{end}}
                     <h3 class="heading-3">{{.Title}}</h3>
                     <div class="card-footer">
                         <span class="text-caption">{{.CreatedAtFormatted}}</span>
